fix placeholder text spacing

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -229,6 +229,8 @@
             grid-template-columns: repeat(12, 1fr);
             gap: (12/16rem);
         }
+        
+
 
         .cs-label {
             font-size: (16/16rem);
@@ -256,7 +258,6 @@
             border: none;
 
             &::placeholder {
-                padding-top: (16/16rem);
                 color: #fff;
                 opacity: 0.5;
             }
